# vqaSDK_examples

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: pyvqa.h  vqasdk.h  vqasdk_export.h
src/: main.cpp  test_vqa_c.cpp
third_parties/opencv3.4.6/include/opencv2/: cvconfig.h  opencv_modules.hpp
third_parties/opencv3.4.6/lib/: libopencv_aruco.so.3.4  libopencv_aruco.so.3.4.6  libopencv_bgsegm.so.3.4  libopencv_bgsegm.so.3.4.6  libopencv_bioinspired.so.3.4  libopencv_bioinspired.so.3.4.6  libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.6  libopencv_ccalib.so.3.4  libopencv_ccalib.so.3.4.6  libopencv_core.so.3.4  libopencv_datasets.so.3.4  libopencv_datasets.so.3.4.6  libopencv_dnn.so.3.4  libopencv_dnn_objdetect.so.3.4  libopencv_dnn_objdetect.so.3.4.6  libopencv_dpm.so.3.4  libopencv_dpm.so.3.4.6  libopencv_face.so.3.4  libopencv_face.so.3.4.6  libopencv_features2d.so.3.4  libopencv_features2d.so.3.4.6  libopencv_flann.so.3.4  libopencv_flann.so.3.4.6  libopencv_freetype.so.3.4  libopencv_fuzzy.so.3.4  libopencv_fuzzy.so.3.4.6  libopencv_hfs.so.3.4  libopencv_highgui.so.3.4  libopencv_highgui.so.3.4.6  libopencv_img_hash.so.3.4  libopencv_imgcodecs.so.3.4  libopencv_imgproc.so.3.4  libopencv_line_descriptor.so.3.4  libopencv_line_descriptor.so.3.4.6  libopencv_ml.so.3.4  libopencv_ml.so.3.4.6  libopencv_objdetect.so.3.4  libopencv_objdetect.so.3.4.6  libopencv_optflow.so.3.4  (+39 more)
third_parties/opencv3.4.6/lib/pkgconfig/: opencv.pc
third_parties/opencv3.4.6/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
